[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"
authors = ["Matt Grimes <matt@mtgrimes.com>"]
about = "Solution attempt for Advent of Code 2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
md5 = "0.7.0"
proptest = "1.4.0"
